--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -30,20 +30,20 @@ GEA_Valkyrie_tech_effect:0 "Enables §HRide of the Valkyries§!\n§HField Hospit
 GEA_valkyrie_tt:0 "§GRide of the Valkyries§! 전투로 인한 우리의 사상자 수를 크게 줄일 것입니다.\n"
 Poliregiment:0 "§G이 중점은 해당 지역 내의 헌병 연대에게 전투 태세를 명령할 것입니다.§!\n"
 Prussian:0 "§G이 중점은 우리 군대를 지원하기 위해 엘리트 연대를 독일 동아시아 회사에 파견할 것을 요구할 것입니다.§!\n"
-Natives:0 "§G이 중점은 우리 군대를 강화하기 위해 우리의 통치하에 있는 지역 지도자들에게 허용된 세력을 통합할 것입니다.§!\n"
-Rights:0 "§G이 중점은 우리 군사력을 강화하기 위해 우리의 통치하에 있는 지역 지도자들에게 허용된 병력을 통합할 것입니다.§!\n"
+Natives:0 "§G이 중점은 우리 군대를 강화하기 위해 우리의 통치 하에 있는 지역 지도자들에게 허용된 세력을 통합할 것입니다.§!\n"
+Rights:0 "§G이 중점은 우리 군사력을 강화하기 위해 우리의 통치 하에 있는 지역 지도자들에게 허용된 병력을 통합할 것입니다.§!\n"
 Marines:0 "§G이 중점은 우리 군대에 추가할 새로운 엘리트 해병대를 훈련하고 구성할 것입니다.§!\n"
-Forts:0 "§G이 중점은 원하는 지역에 요새 라인을 세울 것입니다.§!\n"
+Forts:0 "§G이 중점은 원하는 지역에 요새 방어선을 세울 것입니다.§!\n"
 GEA_Anti_Invasion_Plan:0 "§G이 중점은 취약한 지역에 반 침략군을 조직할 것입니다.§!\n"
 GEA_Deploy_Local_Guards:0 "§G이제 현지 경비병으로부터 군대를 모집 할 수 있습니다.§!\n"
-GEA_Send_Advisory_Groups:0 "§G당신이 속한 주에 독일 자문단 (German Advisory Groups) 이 수여됩니다.§!\n"
+GEA_Send_Advisory_Groups:0 "§G당신이 소유한 주에 독일 자문단이 보내집니다.§!\n"
 GEA_Fleet_will_arrive:0 "§YA새로운 함대가 동아시아 함대에 합류하게 될 것입니다.§!\n"
 GEA_I_WANT_BC:0 "§Y두 대의 새로운 전함이 동아시아 함대의 지휘에 놓이게 될 것입니다.§!\n"
-GEA_I_WANT_BB:0 "§YA건설중인 강력한 전함 SMS Neckar 가 우리의 새로운 기함이 될 것입니다.§!\n"
+GEA_I_WANT_BB:0 "§YA건설중인 강력한 전함 SMS Neckar가 우리의 새로운 기함이 될 것입니다.§!\n"
 GEA_FLATTOP_HERESY:0 "§R당신은 카이저리헤 마리네의 전통적인 교리에서 벗어나고 있습니다. 이렇게 하면 문제가 생길 수 있습니다.§!\n"
 GEA_I_WANT_CARRIER:0 "§YA건설중인 새로운 전함은 평상선으로 변경될 것입니다.§!\n"
 GEA_new_ship_tooltip:0 "§G새로운 군함이 싱가포르에 도착합니다.§!\n"
-GEA_Tonkin:0 "통킨"
+GEA_Tonkin:0 "통킹"
 GEA_Cochinchina:0 "코친차이나"
 
 ### Focuses ###
@@ -81,8 +81,8 @@ GEA_budget3:0 "부담 나누기"
 GEA_budget3_desc:0 "현지 유럽 정착민들은 오랫동안 우리의 보호 혜택을 누렸으며 그들이 누린것에 비해 아주 적은 세금을 냈습니다. 하지만 우리가 식민지를 운영하기 위해 그들의 협력에 의존하고 있으며 또 너무 멀리 갈 수 없기 때문에, 그들과 합의를 하는 것이 더 나을 것입니다."
 GEA_budget4:0 "식민지 관료 강화"
 GEA_budget4_desc:0 "독일령 동아시아는 자신들의 의지를 실행하기 위한 제대로 기능하는 행정부를 가진 적이 없습니다. 이제 식민지 혼란의 결과로 관료주의를 확대하고 우리 식민지에 대한 직접적인 지배를 확립할 때입니다."
-GEA_budget5:0 "[GetNameGEAIndochina] Pacification"
-GEA_budget5_desc:0 "[GetNameGEAIndochina], 는 독일령 동아시아 행정부의 핵심적인 부분이자 경제 중심지입니다. 베트콩 저항 세력 폭도들이 어렴풋이 나타남에 따라서 그것을 진정시키고 확고히 할 필요가 있습니다."
+GEA_budget5:0 "[GetNameGEAIndochina] 안정화"
+GEA_budget5_desc:0 "[GetNameGEAIndochina]는 독일령 동아시아 행정부의 핵심이자 경제적 중심지입니다. 최근 베트콩 폭도들이 여기저기서 나타남에 따라, 우리는 이 곳을 안정시키고 영향력을 확고히 할 필요가 있습니다."
 GEA_budget6:0 "싱가포르의 공장들"
 GEA_budget6_desc:0 "싱가포르에는 현재 의미있는 중공업이 없습니다. 일부 독일의 기업들이 아시아 진출에 관심이 있지만 투자를 시작하기 전에 우리의 지원을 요청합니다. 새로운 공장들은 고용을 늘리고 상황을 진정시킬 것입니다."
 GEA_budget7:0 "말라야 강화"
@@ -110,7 +110,7 @@ GEA_budget17_desc:0 "열악한 기반시설과 거친 환경 때문에 아군이
 GEA_air1:0 "싱가포르 비행단"
 GEA_air1_desc:0 "현재 우리의 공군은 전적으로 해군 항공대로 구성되어 있습니다. 우리는 육지에 기반을 둔 비행장을 위한 조종사를 추가로 찾고 훈련시켜야 합니다."
 GEA_air2:0 "칭타오 공군기지"
-GEA_air2_desc:0 "AOG 와 공유되는 칭타오는 지역 전체에 걸쳐 제공력을 투사할 수있는 완벽한 위치입니다. 이론적으로, 우리는 청나라, 봉천정부 그리고 심지어 일본을 하나의 공군기지로부터 공격할 수 있습니다. 이제 우리는 이러한 선택 사항들을 용이하게 하기 위해 그것을 확장하도록 노력해야 합니다."
+GEA_air2_desc:0 "AOG와 공유되는 칭타오는 지역 전체에 걸쳐 제공력을 투사할 수있는 완벽한 위치입니다. 이론적으로, 우리는 청나라, 봉천정부 그리고 심지어 일본을 하나의 공군기지로부터 공격할 수 있습니다. 이제 우리는 이러한 선택 사항들을 용이하게 하기 위해 그것을 확장하도록 노력해야 합니다."
 GEA_air3:0 "공중 연습"
 GEA_air3_desc:0 "우리의 조종사들은 우리의 요구에 맞는 최상의 조건에서 훈련을 받아야 하며, 우리는 경쟁자들에게 우리가 의미하는 것이 사업이라는 것을 보여주기 위해 칭타오 상공에서 워게임을 시작할 것입니다."
 GEA_air4:0 "포케볼프 동아시아 자회사"
@@ -126,7 +126,7 @@ GEA_navy2_desc:0 "동아시아, 아마 다른 그 어느 곳보다도, 흩어진
 GEA_fleet1:0 "현존함대"
 GEA_fleet1_desc:0 "대양함대의 현재 경향은 우세한 힘과 때때로 힘을 통하여, 바다를 지배하게 될 파괴적인 출격을 하고 있습니다. 이 사상을 사관학교에서 그들을 따름으로써 우리는 정통 독일의 해군 교리가 모든 함대에 걸쳐 유지되도록 보장할 수 있습니다."
 GEA_fleet_2:0 "현대 구축함"
-GEA_fleet_2_desc:0 "구축함은 현대 해군의 중추입니다. 우리는 우리 자신을 더 높은 기준으로 개조하고 재설계해야 합니다."
+GEA_fleet_2_desc:0 "구축함은 현대 해군의 중추입니다. 우리는 이들을 더 높은 기준으로 개조하고 재설계해야 합니다."
 GEA_battlecruiser1:0 "해양 사령부"
 GEA_battlecruiser1_desc:0 "동아시아 함대 제일의 우선 순위는 유사시 일본 해군 전력을 격퇴하는 것입니다. 이것은 우리의 교리적 노력이 그들의 약점을 이용하는데 집중되어야 한다는 것을 의미합니다. 일본은 괴뢰국과 소유주의 수입에 크게 의존하고 있습니다. 따라서 무역 혼란을 목표로 한다면 우리는 엄청난 타격을 입힐 수 있습니다."
 GEA_battlecruiser2:0 "식민지 전함"
@@ -207,7 +207,7 @@ GEA_railway_desc:0 "우리는 지난 일련의 투자와 새로운 주식 거래
 ### Events ###
 # Introduction event
 Ostasien.1.t:0 "동방의 진주"
-Ostasien.1.d:0 "1926년에 영국이 몰락한 이후, 카이저리헤 마리네는 반박의 여지가 없는 태평양의 주인, 그리고 동양의 지배자이자 서양의 수호자입니다. 본국의 혁명을 결정적으로 중국의 영국령 식민지 당국이 오스트랄라시아로 철수한 이후, 남은 이들은 오로지 독일의 보호를 받을 수밖에 없게 되면서, 수에즈부터 칭타오까지 이어지는 방대한 식민지 세력권이 비로소 형성되었습니다. 하지만 이 위대한 업적은 대가가 있었습니다.\n\n동양에서 우리는 본국에서 분리되어버린 타국 식민지를 흡수하는 방식으로 매우 갑작스럽고 크게 확장하게 되었기에; 우리의 지배권을 순순히 인정하도록 그들의 행정 체계를 복구하거나 완전히 재편성하기에는 너무나 혼란스러웠으며, 되려 우리의 행정력까지 무너져버릴 위험이 있었습니다. 때문에 독일령 동아시아는 식민지가 아니라, 해당 영토의 개발, 통치, 방어권을 한 명의 대리인에게 위임한 관할령으로 편성되었고 현재도 그렇습니다.\n\n우리의 지배에도 불구하고, 일본이 우리를 동양에서 밀어내고 본인들이 그 자리를 차지하기로 굳게 마음먹은 지금, 우리의 용감한 군인들은 공사관 도시를 내려다보고 있고, 우리의 영광스러운 전함들은 바다를 가로지르며 경계를 늦추지 않고 있습니다.\n\n내부적인 문제로 가득 찼던 과거는 아직 우리에게 예상치 못한 위험이 남았다는 것을 시사하고 있으며, 바로 그 때가 되면, 우리가 준비되었다는 것을 확실히 하는 것이 바로 우리 해군의 의무입니다."  
+Ostasien.1.d:0 "1926년에 영국이 몰락한 이후, 카이저리헤 마리네는 반박의 여지가 없는 태평양의 주인, 그리고 동양의 지배자이자 서양의 수호자입니다. 본국의 혁명을 결정적으로 중국의 영국령 식민지 당국이 오스트랄라시아로 철수한 이후, 남은 이들은 오로지 독일의 보호를 받을 수밖에 없게 되면서, 수에즈부터 칭타오까지 이어지는 방대한 식민지 세력권이 비로소 형성되었습니다. 하지만 이 위대한 업적은 대가가 있었습니다.\n\n동양에서 우리는 본국에서 분리되어버린 타국 식민지를 흡수하는 방식으로 매우 갑작스럽고 크게 확장하게 되었기에; 우리의 지배권을 순순히 인정하도록 그들의 행정 체계를 복구하거나 완전히 재편성하기에는 너무나 혼란스러웠으며, 되려 우리의 행정 체계까지 위협받을 지경이었습니다. 때문에 독일령 동아시아는 식민지가 아니라, 해당 영토의 개발, 통치, 방어권을 한 명의 대리인에게 위임한 관할령으로 편성되었고 현재도 그렇습니다.\n\n우리의 지배에도 불구하고, 일본이 우리를 동양에서 밀어내고 본인들이 그 자리를 차지하기로 굳게 마음먹은 지금, 우리의 용감한 군인들은 공사관 도시를 내려다보고 있고, 우리의 영광스러운 전함들은 바다를 가로지르며 경계를 늦추지 않고 있습니다.\n\n내부적인 문제로 가득 찼던 과거는 아직 우리에게 예상치 못한 위험이 남았다는 것을 시사하고 있으며, 바로 그 때가 되면, 우리가 준비되었다는 것을 확실히 하는 것이 바로 우리 해군의 의무입니다."  
 Ostasien.1.a:0 "좋았어!"
 
 # Black Monday
@@ -372,8 +372,8 @@ Ostasien.51.a:0 "Great!"
 Ostasien.51.b:0 "Great!"
 
 Ostasien.52.t:0 "새로운 선박 도착"
-Ostasien.52.d:0 "New ships built in the 1934 Naval Plan have joined the glorious Ostasien fleet in Singapur."
-Ostasien.52.a:0 "Excellent!"
+Ostasien.52.d:0 "1934년 해군 계획에 의해 건조된 새 함선이 영광스러운 우리 동아시아 싱가포르 함대에 합류했습니다."
+Ostasien.52.a:0 "멋지군!"
 
 # GEA Action in the Philippines
 
@@ -407,24 +407,24 @@ Ostasien.65.a:0 "Well done."
 # GEA Intervention in Burma
 
 Ostasien.66.t:0 "버마의 사회 불안"
-Ostasien.66.d:0 "The Kingdom of Burma, which gained its independence with the help of German Empire, is facing a deep political crisis. Students and workers have risen up against the monarchy in critical demonstrations and protests. Police units have in so far been completely unsuccessful in containing the radical protesters. Should we try to support the Burmese monarchy in the crisis?"
-Ostasien.66.a:0 "Send the fleet to show our support"
-Ostasien.66.b:0 "Not our business."
+Ostasien.66.d:0 "독일 제국의 도움으로 독립을 쟁취한 버마 왕국은 심각한 정치적 위기에 처해 있습니다. 불만으로 가득 찬 학생들과 노동자들은 군주제에 대항하여 들고일어났습니다. 현지 경찰은 과격한 시위자들을 진압하는 데 완전히 실패했습니다. 우리가 나서서 위기에 처한 버마의 군주제를 도와줘야 할까요?"
+Ostasien.66.a:0 "함대를 보내 우리의 지지를 보여줘라"
+Ostasien.66.b:0 "우리와는 관계 없다."
 
 Ostasien.67.t:0 "독일 함대의 양곤 도착"
-Ostasien.67.d:0 "Today a massive German fleet arrived at Yangon. The German naval delegation came to show their support to Burmese monarchy. The dissenters have been shocked and deterred by the powerful German fleet."
-Ostasien.67.a:0 "Mighty Germany!"
+Ostasien.67.d:0 "오늘 장대한 규모의 독일 함대가 양곤에 도착했습니다. 독일 해군 대표단은 버마의 군주제에 대한 공개적인 지지를 표명했습니다. 군주제 반대자들은 강력한 독일 함대 앞에 단념할 수밖에 없었습니다."
+Ostasien.67.a:0 "강대한 독일이여!"
 
-Ostasien.68.t:0 "버마에서의 복원된 명령"
-Ostasien.68.d:0 "Burma, a young kingdom recently facing a deep political crisis, has restored order thanks to the swift and resolute action of the Ostasien fleet. The Burmese ambassador acknowledged their appreciation for German Empire and admiral Hellmuth Mücke. Now they seek closer relations with German empire to protect their independence and stability."
-Ostasien.68.a:0 "Guarantee their independence"
-Ostasien.68.b:0 "But I don't know anything about Burma!"
+Ostasien.68.t:0 "회복된 버마의 질서"
+Ostasien.68.d:0 "최근 심각한 정치적 위기에 직면한 신생국 버마는 동아시아 함대의 신속하고 단호한 행동으로 질서를 회복했습니다. 버마 대사는 독일 제국과 헬무트 뮈케 제독에 대한 감사를 표했습니다. 이제 그들은 그들의 독립과 안정을 지키기 위해 독일 제국과의 더 가까운 관계를 바라고 있습니다."
+Ostasien.68.a:0 "그들의 독립을 보장하자"
+Ostasien.68.b:0 "나는 버마에 대해 아는 게 아무것도 없는데!"
 
 # Dissolution of the GEA
 
-#Ostasien.69.t:0 "Berlin goes quiet"
-#Ostasien.69.d:0 "We've now lost all contact with our colonial office in Berlin, not knowing of what to do next. Meanwhile the natives start to gather outside the Government Office, demanding independence. The atmostphere is tense like it never has been before before."
-#Ostasien.69.a:0 "An uncertain future awaits us"
+#Ostasien.69.t:0 "고요해진 베를린"
+#Ostasien.69.d:0 "베를린에 있는 식민지 관리 당국과의 모든 연락이 끊겼습니다. 그러는 동안 원주민들은 독립을 요구하며 관청 주위로 모여들기 시작했습니다. 분위기는 전례가 없을 정도로 팽팽히 긴장된 상태입니다."
+#Ostasien.69.a:0 "불확실한 미래가 우리를 기다리고 있다"
 
 
 
@@ -432,7 +432,7 @@ Ostasien.68.b:0 "But I don't know anything about Burma!"
 GEA_indochina_war_decisions:0 "인도차이나 전쟁"
 GEA_indochina_war_decisions_desc:0 "The Indochinese insurgency has deteriorated into a full-blown war. However, the war against Vietcong insurgents has no concrete front. Everywhere is a frontline and every peasant wearing a rice hat could be a Vietcong. We must do whatever we can to secure the victory of Kaiserreich. \n\nEstimated §YInsurgency Strength§! in Indochina: §R[?INC.guerilla_activity|-0]§!\n"
 reduce_10_guerilla_tooltip:0 "We estimate this will reduce §YInsurgency Strength§! by §R10§!.\n"
-GEA_suppress_Tonkin:0 "통킹에 있는 베트콩 진압"
+GEA_suppress_Tonkin:0 "통킹의 베트콩 진압"
 GEA_maintain_Tonkin_control:0 "Maintain our control in Tonkin"
 GEA_reinforce_police:0 "Reinforce Police Units"
 GEA_Zeppelin_decision:0 "Deploy Zeppelin Airships"
@@ -535,8 +535,8 @@ GEA_plantations_negotiation_idea:0 "Negotiate with Plantation Workers"
 GEA_falling_price_idea:0 "Falling Price"
 GEA_conrol_price_idea:0 "Price Control Efforts"
 GEA_pacific_rule_idea:0 "Rule the Pacific"
-GEA_vietcong_killer_idea:0 "Vietcong Killer"
-GEA_vietcong_killer_idea_desc:0 "Anyone who runs is a Vietcong! Anyone who stands still is a well-disciplined Vietcong!"
+GEA_vietcong_killer_idea:0 "베트콩 킬러"
+GEA_vietcong_killer_idea_desc:0 "도망치는 자는 베트콩이다! 자리를 지키는 자는 잘 훈련된 베트콩이다!"
 #jungle_warfare:0 "Jungle Combat Training" Redundant with Siamese fiels
 GEA_jungle_tt:0 "§GJungle Combat Training§! will help better enhance our ability to fight in the jungle.\n"
 GEA_jungle_warfare_effect:0 "Enables §HJungle Combat Training§!\n§HAll legged units\n    Jungle§!\n      Attack: §G+10%§!\n      Defence: §G+5%§!\n      Movement: §G+5%§!\n\n"
