--- a/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
@@ -23,45 +23,45 @@ SRI_national_populist_party:0 "ANI"
 SRI_national_populist_party_long:0 "Associazione Nazionalista Italiana"
 
 ### Opinion Modifiers ###
-SRI_did_not_listen_FRA:0 "이탈리아가 우리의 충고를 무시한다."
+SRI_did_not_listen_FRA:0 "이탈리아가 우리의 충고를 무시했다."
 
 ### Decisions ###
-SRI_international_decisions:0 "인터내셔널에서 이탈리아"
-SRI_international_decisions_desc:0 "이탈리아 사회주의 공화국은 인터네셔널 설립 맴버입니다. 그리고 우리는 다른 인터네셔널 맴버가 그러하듯이 주도성을 가지고 다양한 계획을 지원하고 도와주었습니다."
-SRI_Join_Phalanstere:0 "팔랑스테르에 가입하다."
-SRI_Join_Phalanstere_desc:0 "과학적 팔랑스테르는 인터네셔널 맴버 국가의 과학자들이 함께 창설한 기구입니다. 우리 역시 이 조직에 참가하여 우리의 지식을 나누고 배워야 합니다."
-SRI_Assist_Damocles_Project:0 "디모클라스 계획 지원"
-SRI_Assist_Damocles_Project_desc:0 "영국이 핵 연구를 위한 계획을 만들었습니다. 동맹을 돕기 위하여 우리가 가진 앤리코 페르미를 파견 보낼 것입니다. 그는 뛰어난 핵물리학자로 아마 이 프로젝트의 진전에 큰 도움이 될 것입니다."
-SRI_political_decisions:0 "Political Decisions"
-SRI_political_decisions_desc:0 "There are many different political decisions that we can take to shape the nature of the republic."
-SRI_begin_the_cultural_revolution:0 "Begin the Cultural Revolution"
-SRI_begin_the_cultural_revolution_desc:0 "Reactionary elements still plague our society, and like rats, when one is purged, a dozen more seem to scurry out from under the woodwork. We must endeavour to eliminate them entirely in one fell swoop."
+SRI_international_decisions:0 "인터내셔널에서의 이탈리아"
+SRI_international_decisions_desc:0 "이탈리아 사회주의 공화국은 인터내셔널의 창립 멤버입니다. 그리고 우리는 다른 인터내셔널 회원국들이 그러하듯이 다양한 계획에 적극적으로 나서 지지하고 또 도왔습니다."
+SRI_Join_Phalanstere:0 "팔랑스테르에 가입"
+SRI_Join_Phalanstere_desc:0 "과학 팔랑스테르는 각 인터내셔널 회원국의 과학자들이 함께 창설한 기구입니다. 우리 역시 이 조직에 참가하여 우리의 지식을 나누고 배워야 합니다."
+SRI_Assist_Damocles_Project:0 "다모클레스 계획 지원"
+SRI_Assist_Damocles_Project_desc:0 "영국이 핵 기술 연구에 대한 계획을 추진했습니다. 우리는 동맹을 돕기 위하여 우리 과학자 앤리코 페르미를 파견할 것입니다. 그는 뛰어난 핵물리학자로 아마 이 프로젝트의 진전에 큰 도움이 될 것입니다."
+SRI_political_decisions:0 "정치적 결정"
+SRI_political_decisions_desc:0 "공화국의 주체를 형성하기 위해서 우리는 많은 다양한 정치적 결정들을 내릴 수 있습니다."
+SRI_begin_the_cultural_revolution:0 "문화 혁명을 시작하다"
+SRI_begin_the_cultural_revolution_desc:0 "반동 분자들은 여전히 쥐새끼들처럼 우리 사회를 괴롭히고, 숙청이 시작되면 쥐새끼들처럼 수십 명 이상이 줄줄이 드러납니다. 우리는 그들을 완전히 제거하기 위해 막대한 노력을 해야 합니다."
 SRI_unite_italia:0 "이탈리아 통일"
-SRI_unite_italia_desc:0 "이탈리아는 이탈리아 내전동안 분열되었습니다. 그리나 마침내, 이탈리아 사회주의 공화국이 다시 이탈리아를 재통일 했습니다.“
+SRI_unite_italia_desc:0 "이탈리아는 이탈리아 내전을 통해 분열되었습니다. 그러나 마침내, 이탈리아 사회주의 공화국이 이탈리아를 재통일했습니다."
 
 ### Flags ###
-SRI_communal_syndicalism_flag:0 "공동체 생디칼리즘 지원"
+SRI_communal_syndicalism_flag:0 "공동체적 생디칼리즘 지원"
 SRI_industrial_institute_created:0 "IRI 창설"
 SRI_red_army_created:0 "붉은 군대 창설"
 SRI_red_guards_supported:0 "적위대 지원"
-SRI_italy_unified_flag:0 "이탈리아가 통일되다."
-SRI_pope_exiled:0 "교황이 추방되다."
-SRI_leave_pope_alone:0 "교황을 냅두다."
+SRI_italy_unified_flag:0 "이탈리아가 통일되다"
+SRI_pope_exiled:0 "교황이 추방당하다."
+SRI_leave_pope_alone:0 "교황을 그대로 두다"
 SRI_exile_the_pope:0 "우리가 교황을 추방하다"
-SRI_have_a_red_pope:0 "사회주의적 교황이 선출되다."
-SRI_fourth_congress_done:0 "네번째 평의회가 끝나다."
-SRI_cultural_revolution_begins:0 "문화 대혁명을 시작하다"
-SRI_pisa_pile_1:0 "앤리코 페르미가 그의 연구를 시작하다."
+SRI_have_a_red_pope:0 "사회주의적 교황이 선출되다"
+SRI_fourth_congress_done:0 "네번째 평의회가 끝나다"
+SRI_cultural_revolution_begins:0 "문화 혁명을 시작하다"
+SRI_pisa_pile_1:0 "앤리코 페르미가 그의 연구를 시작하다"
 
 ### Ideas ###
 SRI_red_guards_idea:0 "적위대"
-SRI_red_guards_idea_desc:0 "1919년의 내전 시기부터. 이탈리아 군대는 적위병 혹은 적위대라고 알려진 노동자 민병대로 구성되어 있었습니다. 이 지역 민병대는 높은 사기를 보유했지만, 보급과 같은 전쟁과 관련된 사항에는 별다른 관심이 없었죠."
+SRI_red_guards_idea_desc:0 "1919년의 내전 시기부터. 이탈리아 군대는 적위병 혹은 적위대라고 알려진 노동자 민병대로 구성되어 있었습니다. 이 지역 민병대는 높은 사기를 보유했지만, 보급과 같은 전쟁과 관련된 사항에는 별다른 관심이 없었습니다."
 SRI_mass_red_guards_idea:0 "적위대"
 SRI_mass_red_guards_idea_desc:0 ""
 SRI_firepower_red_guards_idea:0 "적위대"
 SRI_firepower_red_guards_idea_desc:0 ""
 SRI_divided_nation:0 "분열된 국가"
-SRI_divided_nation_desc:0 "내전으로 인한 분단 이후, 이탈리아 사회주의 공화국은 내부에서 분열되기 시작되었습니다. 다양한 연맹들이 국가 권력을 차지하기 위해 분투하고 있고 질서는 확보되지 않았습니다. 이러한 문제는 반드시 빨리 해결되어야 합니다."
+SRI_divided_nation_desc:0 "내전으로 인한 분단 이후, 이탈리아 사회주의 공화국은 내분으로 들끓었습니다. 다양한 세력들이 국가 권력을 차지하기 위해 분투하고 질서는 확보되지 않았습니다. 이러한 문제는 반드시 빠르게 해결되어야만 합니다."
 SRI_socialist_welfare:0 "사회주의적 복지"
 SRI_socialist_welfare_desc:0 ""
 SRI_workplace_democracy:0 "산업 민주화"
@@ -74,9 +74,9 @@ SRI_iri_idea:0 “국영 산업 부흥 공사"
 SRI_iri_idea_desc:0 ""
 SRI_communal_syndicalism_idea:0 "공동체 생디칼리즘"
 SRI_communal_syndicalism_idea_desc:0 ""
-SRI_decentralized_economy_idea:0 "탈 중앙적 산업"
+SRI_decentralized_economy_idea:0 "탈중앙화 산업"
 SRI_decentralized_economy_idea_desc:0 ""
-SRI_mass_production_idea:0 "산업 동원“
+SRI_mass_production_idea:0 "산업 동원"
 SRI_mass_production_idea_desc:0 ""
 SRI_socialist_dedication:0 "사회주의적 헌신"
 SRI_socialist_dedication_desc:0 ""
@@ -102,53 +102,53 @@ SRI_mobile_red_army:0 "Armata Rossa"
 SRI_mobile_red_army_desc:0 ""
 SRI_squadrismo_idea:0 "Squadrismo"
 SRI_squadrismo_idea_desc:0 ""
-SRI_economic_miracle_idea:0 “경제적 기적"
+SRI_economic_miracle_idea:0 "경제 기적"
 SRI_economic_miracle_idea_desc:0 ""
 SRI_cultural_revolution_idea:0 "문화 혁명"
-SRI_cultural_revolution_idea_desc:0 "공화국은 이탈리아 전역의 혁명적인 사회를 건설하고 퇴폐적 자본주의와 오래된 구습을 타파하기 위해 문화혁명을 겪고 있는 중입니다."
+SRI_cultural_revolution_idea_desc:0 "공화국은 이탈리아 전역에 혁명적인 사회를 건설하고 퇴폐적 자본주의와 오랜 악습을 타파하기 위해 문화 혁명을 진행하고 있습니다."
 SRI_firearm_improvement_idea:0 "화기 항상"
 SRI_firearm_improvement_idea_desc:0 ""
-SRI_motorized_offensive_idea:0 “차량화 공세"
+SRI_motorized_offensive_idea:0 "차량화 공세"
 SRI_motorized_offensive_idea_desc:0 ""
-SRI_crime_problem:0 "조직 범죄들"
-SRI_crime_problem_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 합법성과 경제를 해치기 시작했습니다."
-SRI_crime_problem_peace:0  "조직 범죄들"
-SRI_crime_problem_peace_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 합법성과 경제를 해치기 시작했습니다."
-SRI_crime_problem_war:0 ""조직 범죄들"
-SRI_crime_problem_war_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 합법성과 경제를 해치기 시작했습니다."
-SRI_massive_strikes:0 "Massive Strikes"
+SRI_crime_problem:0 "범죄 조직들"
+SRI_crime_problem_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 법치와 경제를 해치기 시작했습니다."
+SRI_crime_problem_peace:0 "범죄 조직들"
+SRI_crime_problem_peace_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 법치와 경제를 해치기 시작했습니다."
+SRI_crime_problem_war:0 "범죄 조직들"
+SRI_crime_problem_war_desc:0 "공화국 내부의 이탈리아 조직 범죄 집단들이 성장하고 있습니다. 정부의 강력한 대응에도 불구하고, 그들은 공화국의 법치와 경제를 해치기 시작했습니다."
+SRI_massive_strikes:0 "거대한 타격"
 SRI_massive_strikes_desc:0 ""
-SRI_government_scandal:0 "Government Scandal"
+SRI_government_scandal:0 "정부 스캔들"
 SRI_government_scandal_desc:0 ""
 SRI_recovering_economy:0 "회복하는 경제"
-SRI_recovering_economy_desc:0 "Our part of the Italian peninsula has always lagged behind the rest, and the situation has only grown worse since the chaos following the Weltkrieg. It will take serious effort to get it healthy once again, though the Republic is confident that it possesses the potential."
+SRI_recovering_economy_desc:0 "이탈리아 반도에서 우리가 차지한 지역은 언제나 다른 지역에 비해 낙후되었고, 이는 세계 대전 이후의 혼란으로 더욱 악화되기까지 했습니다. 비록 공화국이 틀림없이 잠재력을 가지고 있을지라도, 경제를 다시 일으켜세우기 위해서는 진지한 노력이 필요할 것입니다."
 SRI_agriculture_act_idea:0 "이탈리아 농업법"
 SRI_agriculture_act_idea_desc:0 ""
 SRI_industry_act_idea:0 "이탈리아 농업법"
 SRI_industry_act_idea_desc:0 ""
 SRI_secret_police_idea:0 "이탈리아 비밀 경찰"
 SRI_secret_police_idea_desc:0 ""
-SRI_focus_defence_idea:0 "Focus on Defence"
+SRI_focus_defence_idea:0 "방어에 중점"
 SRI_focus_defence_idea_desc:0 ""
-SRI_popular_army_idea:0 "Popular Army"
+SRI_popular_army_idea:0 "인민군"
 SRI_popular_army_idea_desc:0 ""
-SRI_prepare_for_war_idea:0 "Preparations for War"
+SRI_prepare_for_war_idea:0 "전쟁 준비"
 SRI_prepare_for_war_idea_desc:0 ""
-SRI_neosanfedisti_1:0 "신산페디즘“
-SRI_neosanfedisti_1_desc:0 "원 산페디즘 운동은 19세기 초의 나폴레옹의 프랑스에 반대하는 소위 ‘신성한 믿음의 군대’라고 불린 것이었다. 그리고 지금 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면 재조직 되었습니다."
-SRI_neosanfedisti_2:0 " "신산페디즘“
-SRI_neosanfedisti_2_desc:0 "원 산페디즘 운동은 19세기 초의 나폴레옹의 프랑스에 반대하는 소위 ‘신성한 믿음의 군대’라고 불린 것이었다. 그리고 지금 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면 재조직 되었습니다."
-SRI_neosanfedisti_3:0  "신산페디즘“
-SRI_neosanfedisti_3_desc:0 "원 산페디즘 운동은 19세기 초의 나폴레옹의 프랑스에 반대하는 소위 ‘신성한 믿음의 군대’라고 불린 것이었다. 그리고 지금 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면 재조직 되었습니다."
-SRI_rising_power:0 "Rising Power"
+SRI_neosanfedisti_1:0 "신 신앙주의"
+SRI_neosanfedisti_1_desc:0 "최초의 신앙주의자들은 19세기 초 나폴레옹의 프랑스에 대항하는 소위 ‘거룩한 신앙군’이라고 불리었던 그들입니다. 그리고 지금, 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면서 재조직되었습니다."
+SRI_neosanfedisti_2:0 "신 신앙주의"
+SRI_neosanfedisti_2_desc:0 "최초의 신앙주의자들은 19세기 초 나폴레옹의 프랑스에 대항하는 소위 ‘거룩한 신앙군’이라고 불리었던 그들입니다. 그리고 지금, 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면서 재조직되었습니다."
+SRI_neosanfedisti_3:0 "신 신앙주의"
+SRI_neosanfedisti_3_desc:0 "최초의 신앙주의자들은 19세기 초 나폴레옹의 프랑스에 대항하는 소위 ‘거룩한 신앙군’이라고 불리었던 그들입니다. 그리고 지금, 그것은 이탈리아의 생디칼리즘 공화국에 반대하는 성직자들이 사회주의 독재에 대항한다고 주장하면서 재조직되었습니다."
+SRI_rising_power:0 "떠오르는 힘"
 SRI_rising_power_desc:0 "We have proven ourselves to be a player on the world stage, and our people thirst for a return to true glory."
-SRI_isolated:0 "Look to Home"
+SRI_isolated:0 "고향을 바라보다"
 SRI_isolated_desc:0 "Nothing would please the Italians more than to be left out of the global conflicts. They will defend their borders with vigour and solidarity!"
 SRI_new_purpose_idea:0 "A New Purpose"
 SRI_new_purpose_idea_desc:0 ""
 SRI_for_investment_idea:0 "Foreign Investment"
 SRI_for_investment_idea_desc:0 ""
-SRI_construction_focus_idea:0 "Build the Republic"
+SRI_construction_focus_idea:0 "공화국을 건설하다"
 SRI_construction_focus_idea_desc:0 ""
 SRI_academy_of_science:0 "Accademia della Scienza"
 SRI_academy_of_science_desc:0 ""
@@ -156,17 +156,17 @@ SRI_army_production_idea:0 "Army Production"
 SRI_army_production_idea_desc:0 ""
 SRI_armor_production_idea:0 "Armour Production"
 SRI_armor_production_idea_desc:0 ""
-SRI_new_army_idea:0 "The New Republican Army"
+SRI_new_army_idea:0 "새로운 공화국 육군"
 SRI_new_army_idea_desc:0 ""
-SRI_air_production_idea:0 "Italian Aircraft Industry"
+SRI_air_production_idea:0 "이탈리아 항공 공업"
 SRI_air_production_idea_desc:0 ""
-SRI_air_focus:0 "Rule the Skies"
+SRI_air_focus:0 "창공을 지배하라"
 SRI_air_focus_desc:0 ""
-SRI_navy_focus:0 "Rule the Seas"
+SRI_navy_focus:0 "창공을 지배하라"
 SRI_navy_focus:0 ""
 
 ### Tooltips ###
-SRI_had_fourth_congress:0 "4번째 평의회가 끝나다.\n"
+SRI_had_fourth_congress:0 "4차 평의회가 끝나다.\n"
 SRI_same_overlord_as_ITA:0 "has same overlord as §Y[ITA.GetName]§!\n"
 SRI_overlord_same_faction:0 "has overlord in same faction as §Y[SRI.GetName]§!\n"
 SRI_both_radsoc:0 "both §Y[ITA.GetName]§! and §Y[SRI.GetName]§! are Radical Socialist\n"
@@ -186,20 +186,20 @@ SRI_asymmetrical_warfare_effect:0 "Enables §HGuerrilla Warfare Training§!\n§H
 ITA_risorgimento_begun_tooltip:0 "Risorgimento has begun and we shall claim all of Italy \n\n"
 
 ### Fourth Congress Focuses ###
-SRI_4th_congress:0 "4차 평의회 회의"
-SRI_4th_congress_desc:0 "4번째 국가 평의회를 개최하기 위한 모든 준비는 마침내 끝냈습니다. 이탈리아 사회주의 공화국 전역의 노조에서 온 모든 남자와 여자들이 토리노에서 국가의 미래를 위한 토론을 시작하려고 합니다."
+SRI_4th_congress:0 "4차 평의회"
+SRI_4th_congress_desc:0 "4차 국가 평의회를 개최하기 위한 모든 준비는 마침내 끝냈습니다. 이탈리아 사회주의 공화국 전역의 노조에서 온 모든 남자와 여자들이 토리노에서 국가의 미래를 위한 토론을 시작하려고 합니다."
 SRI_stregthen_the_republic:0 "공화국을 강화하다."
 SRI_stregthen_the_republic_desc:0 "일부가 의장의 권력을 강화시키자는 것에 반하여, 공화국을 강화시킬 것입니다. 그리고 우리의 산업 민주주의 원칙이야 말로 혁명을 지키려면 고수해야 합니다."
 SRI_liberation_theology:0 "해방 신학"
 SRI_liberation_theology_desc:0 "사회주의와 기독교는 매우 유사합니다. 두 사상 모두 상처받고 탄압받는 자들을 돕기 위해 분투하는 것처럼 말이죠. 우리 자랑스러운 공화국 역시 이러한 해방 정신으로 탄생되었습니다. 따라서 이러한 해방 신학의 원칙은 유지되어야 하고, 강화되어야 되며, 촉진되어야 합니다."
-SRI_worker_priests:0 “노동자-사제"
-SRI_worker_priests_desc:0 "우리는 공화국과 함께 하려는 노동자-사제 운동을 지원할 것입니다. 노동자-사제 운동은 사람들 간 유대를 강화시키기 위해 공장 안에서 사제들이 일하는 것을 긍정합니다. 우리가 이 운동을 대규모로 지원할겁니다.“
+SRI_worker_priests:0 “노동-성직자"
+SRI_worker_priests_desc:0 "우리는 공화국과 함께 하려는 노동-성직자 운동을 지원할 것입니다. 노동-성직자 운동은 인민들 간의 유대를 강화시키기 위해 공장 안에서 성직자들이 일하는 것을 지지합니다. 우리는 이 운동을 대규모로 지원할 것입니다."
 SRI_revolutionary_democracy:0 "코뮌 사회주의"
 SRI_revolutionary_democracy_desc:0 "모든 공동체들은 원래 민주적이건 아니건 간에 반드시 민주적으로 운영되어야 합니다. 중앙정부는 민주주의가 실패한 곳에 민주주의의 뿌리를 내리기 위해서 그리고 각 공동체들이 국가적 차원에서 똑같은 대표가 될 수 있도록 보장하기 위해 개입해야 할 것입니다."
 SRI_rural_communes:0 "촌락 코뮌"
 SRI_rural_communes_desc:0 "촌락지역에서 사는 동지들은 도시 지역과 같은 경제적 기회를 누릴 수 없습니다. 따라서 우리는 많은 작은 도시나 마을 그리고 그와 관련된 코뮌에 투자하여서, 우리 위대한 국가 전역에 공정한 기회를 제공할겁니다."
 SRI_urbanization:0 "도시 코뮌"
-SRI_urbanization_desc:0 "마치 찬란한 빛이 어둠을 몰아낸 것처럼, 혁명은 이탈리아 도시에서부터 왔고, 이러한 도시들은 혁명 정신을 영원히 수호 할 것입니다. 그러므로 우리는 가장 도시화된 코뮌에 투자해야 하겠죠."
+SRI_urbanization_desc:0 "마치 찬란한 빛이 어둠을 몰아낸 것처럼, 혁명은 이탈리아 도시에서부터 왔고, 이러한 도시들은 혁명 정신을 영원히 수호할 것입니다. 그러므로 우리는 가장 도시화된 코뮌에 투자해야 하겠죠."
 SRI_worker_councils:0 "노동자 의회"
 SRI_worker_councils_desc:0 "코뮌이 부르주아에 의해 실행된 체제보다 더 민주적이라는 것을 증명하는 동안에, 많은 사람들은 관료제의 성장을 우려하기 시작했습니다. 이들을 감시하기 위하여 각 코뮌들은 다양한 노동조합으로부터 구성된 지역 입법부인 노동자 의회를 설립하게 될 것입니다."
 SRI_workers_self_management:0 "노동자 자주 관리"
@@ -215,7 +215,7 @@ SRI_cement_congres_authority_desc:0 "공화국을 강화시켰기 때문에, 의
 SRI_streghten_the_chairman:0 "Strengthen the Chairman"
 SRI_streghten_the_chairman_desc:0 "In order for the republic to be Strong, the power of the Chairman must be strong. How can we help the people without the guiding hand of the chairman? And the congress is just an attempt to bring back bourgeoisie parliamentarianism, but the Chairman shall rule, and the anarchist principals of the revolution shall be upheld."
 SRI_state_atheism:0 "State Atheism"
-SRI_state_atheism_desc:0 "Superstition has no place in the Italian Republic. Gods and prophets and made up lives by men to deceive man is not needed in the modern age. Religion is something that keeps men in chains, drugged by the opiate of the masses but we shall break the chains that religion has placed upon us. We shall enforce State Atheism for religion has no place within the republic."
+SRI_state_atheism_desc:0 "Superstition has no place in the Italian Republic. Gods and prophets and made up ves by men to deceive man is not needed in the modern age. Religion is something that keeps men in chains, drugged by the opiate of the masses but we shall break the chains that religion has placed upon us. We shall enforce State Atheism for religion has no place within the republic."
 SRI_rouse_the_people:0 "Rouse the People"
 SRI_rouse_the_people_desc:0 "We must rouse all the people of Italy to build the new Italy and spread the revolution. All of Italia must be united. The people must join together for this fight and the many fights that shall come afterwards!"
 SRI_secret_police:0 "Ministry of Public Security"
@@ -240,7 +240,7 @@ SRI_cement_chairmans_power_desc:0 "The power of the Chairman to direct the revol
 ### Industrialisation Focuses ###
 SRI_assess_the_economy:0 "경제에 대한 재고"
 SRI_assess_the_economy_desc:0 "우리는 공화국 경제를 재고하면서, 이탈리아의 재통일을 위해서 경제를 현대화하고 항상 시킬 방법을 찾아야 합니다."
-SRI_communal_syndicalism:0 "코뮌 생디칼리즘"\
+SRI_communal_syndicalism:0 "코뮌 생디칼리즘"
 SRI_communal_syndicalism_desc:0 "경제의 힘은 촌락 코뮌과 지역 생디칼리즘에 달려있습니다. 우리는 그들의 산업화를 도와주어야 합니다."
 SRI_agrian_communes:0 "농업 집산화"
 SRI_agrian_communes_desc:0 "많은 이탈리아인들이 촌락 코뮌에서 삽니다. 또한 내전 이래로 많은 지역 코뮌들이 농업 집산화를 수용하면서 서로를 도우기도 했습니다. 우리는 촌락 코뮌과 그들의 농업 집산화를 더 도와주고 강회 시켜주어야 합니다."
